--- a/src/개념 정리_markdown/단순하고 실용적인 컨트롤러-v4.md
+++ b/src/개념 정리_markdown/단순하고 실용적인 컨트롤러-v4.md
@@ -8,3 +8,23 @@
 
 * 기본적인 구조는 V3와 같다. 
 * 대신에 컨트롤러가 `ModelView₩`를 반환하지 않고, `ViewName` 만 반환한다.
+
+
+* `model.put("member", member)`
+모델이 파라미터로 전달되기 때문에, 모델을 직접 생성하지 않아도 된다.
+
+* `FrontControllerServletV4` 는 사실 이전 버전과 거의 동일하다.
+  
+#### **모델 객체 전달**
+* `Map<String, Object> model = new HashMap<>(); //추가`
+* 모델 객체를 프론트 컨트롤러에서 생성해서 넘겨준다. 
+* 컨트롤러에서 모델 객체에 값을 담으면 여기에 그대로 담겨있게 된다.
+  
+#### **정리**
+ * 이번 버전의 컨트롤러는 매우 단순하고 실용적이다. 
+ * 기존 구조에서 모델을 파라미터로 넘기고, 뷰의 논리 이름을 반환한다는 작은 아이디어를 적용했을 뿐인데, 
+ * 컨트롤러를 구현하는 개발자 입장에서 보면 이제 군더더기 없는 코드를 작성할 수 있다. 
+ * 또한 중요한 사실은 여기까지 한번에 온 것이 아니라는 점이다. 
+ * 프레임워크가 점진적으로 발전하는 과정 속에서 이런 방법도 찾을 수 있었다.
+  
+> **프레임워크나 공통 기능이 수고로워야 사용하는 개발자가 편리해진다.**
