--- a/src/개념 정리_markdown/유연한 컨트롤러-v5.md
+++ b/src/개념 정리_markdown/유연한 컨트롤러-v5.md
@@ -25,3 +25,13 @@
 * 실제 컨트롤러가 ModelView를 반환하지 못하면, 어댑터가 ModelView를 직접 생성해서라도 반환해야 한다.
 * 이전에는 프론트 컨트롤러가 실제 **컨트롤러**를 호출했지만 이제는 이 **어댑터**를 통해서 실제 컨트롤러가 호출된다.
 
+#### 컨트롤러(Controller) 핸들러(Handler)
+* 이전에는 컨트롤러를 직접 매핑해서 사용했다. 그런데 이제는 어댑터를 사용하기 때문에, 
+* 컨트롤러 뿐만 아니라 어댑터가 지원하기만 하면, 어떤 것이라도 URL에 매핑해서 사용할 수 있다. 
+* 그래서 이름을 컨트롤러에서 더 넒은 범위의 핸들러로 변경했다.
+
+#### 어댑터 변환
+* 어댑터가 호출하는 `ControllerV4` 는 뷰의 이름을 반환한다. 
+* 그런데 어댑터는 뷰의 이름이 아니라 `ModelView` 를 만들어서 반환해야 한다. 여기서 어댑터가 꼭 필요한 이유가 나온다.
+* `ControllerV4` 는 뷰의 이름을 반환했지만, 어댑터는 이것을 ModelView로 만들어서 형식을 맞추어 반환한다. 
+마치 110v 전기 콘센트를 220v 전기 콘센트로 변경하듯이!
